# reductoai-cli

./: LICENSE  README.md  pyproject.toml
src/reducto_cli/: __init__.py  client.py  main.py  utils.py
src/reducto_cli/commands/: __init__.py  parse.py  upload.py  version.py
tests/: __init__.py  conftest.py  test_parse.py  test_utils.py
